# computer-vision-ups

./: .gitignore  .gitmodules  README.md
codigo/c c++ curso/: 01-teoria-cpp.md
codigo/c c++ curso/clases/project-0/: CMakeLists.txt  Datos.csv  Operaciones.cpp  Operaciones.hpp  Principal.cpp  programa
codigo/p01_opencv/: Makefile  README.md  main.cpp
codigo/p02_opencv/: Makefile  README.md  main.cpp
codigo/p03_opencv/: Makefile  README.md  main.cpp
codigo/p04_opencv/: Makefile  README.md  main.cpp
codigo/p05_opencv/: Makefile  README.md  main.cpp
codigo/p06_opencv/: README.md  main.cpp
codigo/p07_opencv/: README.md  main.cpp
codigo/p08_opencv/: README.md  main.cpp
codigo/p09_opencv/: README.md  main.cpp
codigo/p10_opencv/: README.md  main.cpp
codigo/p11_opencv_tutorial_completo/: Makefile  main.cpp
codigo/p12_opencv/: main.cpp
codigo/p13_opencv/: main.cpp
codigo/p14_opencv/: Makefile  main.cpp
codigo/p15_lbp/: Makefile  README.md  main.cpp
codigo/p16_opencv/: Makefile  main.cpp
codigo/p17_opencv/: Fundamentos-Shape-Signature.md  Makefile  main.cpp
codigo/simulacion/: main.cpp
materia/apuntes/: clase01.md  clase2.md  clase3.md
materia/descriptores_de_fourier/: DF Fundamentos-Shape-Signature.md  DF Investigacion.md  ejemplo_simple.py  fourier_descriptors_demo.py
materia/hog/: HOG Investigacion.md
materia/local_binnary_patterns/: Local Binary Patterns Investigacion.md
materia/momentos de Hu/: Momentos de Hu Investigacion.md  clase.txt
materia/msv/: modelo_svm_iris.pkl  msv.ipynb
materia/sift/: Ejercicio-Cálculo-Matriz-Hessiana-SIFT.md  SIFT_Fundamentos_Matemáticos.ipynb  (+1 more)
materia/template-maching/: Template Matching en Vision Artificial.md  clase.txt  controlador-template-matching.py  example.py  pyproject.toml
materia/template-maching/v1/: template_matching.py
practicas/Analisis Comparativo de Descriptores de Forma y Clasificacion en Tiempo Real/parte2/: CMakeLists.txt  main.cpp
practicas/Analisis Comparativo de Descriptores de Forma y Clasificacion en Tiempo Real/parte2/android/: sdk
practicas/Analisis Comparativo de Descriptores de Forma y Clasificacion en Tiempo Real/parte2/android/app/: build.gradle.kts
practicas/Analisis Comparativo de Descriptores de Forma y Clasificacion en Tiempo Real/parte2/android/gradle/: libs.versions.toml
practicas/Analisis Comparativo de Descriptores de Forma y Clasificacion en Tiempo Real/parte2/android/gradle/wrapper/: gradle-wrapper.properties
practicas/clasificacion_de_objetos/1C/: CMakeLists.txt  Makefile  main.cpp
prueba-practica/: Listado-Alumnos.ods  calibradorfuerzabruta.cpp  main.cpp
(+67 files in other folders)
